# SimXTodo

./: CMakeLists.txt  LICENSE  README.md  main.c
include/: todo_list.h  utils.h  window_control.h
src/: todo_list.c  utils.c  window_control.c
